[package]
name = "xx"
version = "1.1.8"
edition = "2021"
authors = ["Jeff Dickey (@jdx)"]
license = "MIT"
description = "A collection of useful Rust macros and small functions."
documentation = "https://docs.rs/xx"
repository = "https://github.com/jdx/xx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = { version = "0.4", optional = true }
duct = "0.13"
filetime = "0.2"
flate2 = { version = "1", optional = true }
globwalk = { version = "0.9", optional = true }
homedir = "0.3"
log = "0.4"
miette = "5"
regex = "1"
reqwest = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
tar = { version = "0.4", optional = true }
thiserror = "2"
tokio = { version = "1", optional = true, features = ["full"] }
xz2 = { version = "0.1", optional = true, features = ["static"] }
zip = { version = "2", optional = true }

[features]
archive = ["archive_untar_bzip2", "archive_untar_gzip", "archive_untar_xz", "archive_unzip"]
archive_untar_bzip2 = ["tar", "bzip2"]
archive_untar_gzip = ["tar", "flate2"]
archive_untar_xz = ["tar", "xz2"]
archive_unzip = ["zip"]
glob = ["globwalk"]
hash = ["sha2"]
http = ["reqwest", "tokio"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
rustls-native-roots = ["reqwest/rustls-tls-native-roots"]

[dev-dependencies]
env_logger = "0.11"
insta = "1.38.0"
once_cell = "1"
pretty_assertions = "1"
tempfile = "3"
test-log = "0.2"
